# docs/swagger/swagger.json
@@ -47,16 +47,6 @@
                 "responses": {}
             }
         },
-        "/api/groups": {
-            "get": {
-                "description": "获取APIGroups信息",
-                "tags": [
-                    "Kubernetes"
-                ],
-                "summary": "获取APIGroups信息",
-                "responses": {}
-            }
-        },
         "/api/namespaces": {
             "get": {
                 "description": "获取命名空间",
@@ -77,7 +67,7 @@
                 "responses": {}
             }
         },
-        "/api/pod/list": {
+        "/api/pod": {
             "get": {
                 "description": "获取pod列表",
                 "produces": [
@@ -95,6 +85,30 @@
                         "in": "query"
                     }
                 ],
+                "responses": {}
+            },
+            "put": {
+                "description": "获取APIGroups信息",
+                "tags": [
+                    "Kubernetes"
+                ],
+                "summary": "获取APIGroups信息",
+                "responses": {}
+            },
+            "post": {
+                "description": "获取APIGroups信息",
+                "tags": [
+                    "Kubernetes"
+                ],
+                "summary": "获取APIGroups信息",
+                "responses": {}
+            },
+            "delete": {
+                "description": "获取APIGroups信息",
+                "tags": [
+                    "Kubernetes"
+                ],
+                "summary": "获取APIGroups信息",
                 "responses": {}
             }
         },
